Added Text area

--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -5,67 +5,19 @@
     <DataAnnotationsValidator />
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch @bind-Value="@_model.C" />
+        <TnTInputTextArea @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" />
+        <TnTInputTextArea StartIcon="MaterialIcon.Gif" @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch @bind-Value="@_model.C" EndIcon="MaterialIcon.Group"/>
+        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="MaterialIcon.Group" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputText  @bind-Value="@_model.S"   />
-    </TnTLabel>
-</TnTForm>
-
-<TnTForm Model="@_model" Appearance="FormAppearance.Filled">
-    <DataAnnotationsValidator />
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch @bind-Value="@_model.C" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputSwitch StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputText  StartIcon="MaterialIcon.People" @bind-Value="@_model.S" />
-    </TnTLabel>
-</TnTForm>
-
-<TnTForm Model="@_model" Appearance="FormAppearance.Outlined">
-    <DataAnnotationsValidator />
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox @bind-Value="@_model.C" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
-    </TnTLabel>
-
-    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
+        <TnTInputTextArea StartIcon="MaterialIcon.Gif" @bind-Value="@_model.S" EndIcon="MaterialIcon.Group" />
     </TnTLabel>
 
 </TnTForm>
@@ -74,23 +26,22 @@
     <DataAnnotationsValidator />
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox @bind-Value="@_model.C" />
+        <TnTInputTextArea @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" />
+        <TnTInputTextArea StartIcon="MaterialIcon.Gif" @bind-Value="@_model.S" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
+        <TnTInputTextArea @bind-Value="@_model.S" EndIcon="MaterialIcon.Group" />
     </TnTLabel>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox StartIcon="MaterialIcon.Gif" @bind-Value="@_model.C" EndIcon="MaterialIcon.Group" />
+        <TnTInputTextArea StartIcon="MaterialIcon.Gif" @bind-Value="@_model.S" EndIcon="MaterialIcon.Group" />
     </TnTLabel>
 
 </TnTForm>
-
 
 @(_model.A)
 
