--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -11,7 +11,7 @@
     margin: 0.5rem 0;
     vertical-align: middle;
 
-    input, select {
+    input, select, textarea {
         appearance: none;
         border: none;
         outline: none;
