--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -2,3 +2,8 @@
 
 
 <LiveTest.Client.Components.InputTesting />
+
+
+<TnTComponents.TnTInputCurrency @rendermode="InteractiveAuto"/>
+<TnTComponents.TnTInputCurrency @rendermode="InteractiveServer"/>
+<TnTComponents.TnTInputCurrency @rendermode="InteractiveWebAssembly"/>
