Fixed tabview z index

--- a/TnTComponents/Styles/TnTComponents/_tabview.scss
+++ b/TnTComponents/Styles/TnTComponents/_tabview.scss
@@ -12,6 +12,7 @@
         margin: 0 0.5rem;
         white-space: nowrap;
         overflow-x: auto;
+        z-index: 10;
 
         & > span {
             display: table;
