Added additional attributes and fixed on click name

--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -9,7 +9,7 @@
     type="@Type.ToHtmlType()"
     disabled="@Disabled"
     autofocus="@AutoFocus"
-    @onclick="OnClickCallback">
+    @onclick="OnClick">
     @Icon.Render()
 </button>
 
