--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -91,6 +91,10 @@
     }
 
     &.tnt-filled {
+        align-items: flex-end;
+        padding-bottom: 0.1rem;
+        padding-top: 0.9rem;
+
         &:after {
             content: '';
             height: 1px;
@@ -193,14 +197,21 @@ label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])
 
     &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
         span.tnt-label {
-            transform: translateY(-0.8rem) scale(0.75) translateX(-0.9rem);
+            transform-origin: top left;
+            transform: translateY(-0.8rem) translateX(-0.9rem) scale(0.75);
         }
     }
 
     &:has(span.tnt-filled) {
         span.tnt-label {
-            top: 1.1rem;
+            top: 1.4rem;
             left: 1.25rem;
+        }
+
+        &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
+            span.tnt-label {
+                transform: translateY(-0.75rem) translateX(-0.25rem) scale(0.75);
+            }
         }
     }
 
@@ -216,7 +227,7 @@ label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])
 
         &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
             span.tnt-label {
-                transform: translateY(-1.3rem) scale(0.75) translateX(-0.65rem);
+                transform: translateY(-1.1rem) translateX(-0.65rem) scale(0.75);
             }
         }
     }
@@ -273,7 +284,8 @@ label.tnt-components:has(input[type=checkbox]) {
     }
 
     &:has(.tnt-input:not(.tnt-alternative)) {
-        margin-right:1.5rem;
+        margin-right: 1.5rem;
+
         span.tnt-label {
             margin-left: 1.5rem;
             margin-right: 0.5rem;
@@ -292,7 +304,8 @@ label.tnt-components:has(input[type=checkbox]) {
     }
 
     &:has(.tnt-input.tnt-alternative) {
-        margin-right:2rem;
+        margin-right: 2rem;
+
         span.tnt-label {
             margin-left: 3rem;
             margin-right: 0.5rem;
@@ -588,4 +601,8 @@ span.tnt-radio-group {
             }
         }
     }
+}
+
+.tnt-col .tnt-input:not(:has(input[type=checkbox])):not(:has(input[type=radio])) {
+    width: 100%;
 }
