Added text button style

--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -69,3 +69,9 @@
 <TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}" Appearance="ButtonAppearance.Text">
     Button Text
 </TnTComponents.TnTButton>
+
+
+<TnTButton Appearance="ButtonAppearance.Text">
+    @MaterialIcon.Apps.Render()
+    Button Text
+</TnTButton>
