--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -19,6 +19,7 @@
 @import 'TnTComponents/_skeleton.scss';
 @import 'TnTComponents/_snackbar.scss';
 @import 'TnTComponents/_datagrid.scss';
+@import 'TnTComponents/_chips.scss';
 @import 'Components/_datagrid.scss';
 
 .tnt-components {
