--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -3,6 +3,22 @@
 
 <LiveTest.Client.Components.InputTesting />
 
+<TnTComponents.TnTInputSelect @bind-Value="value" Placeholder="Number">
+    <option value="One">
+        One
+    </option>
+    <option value="two">
+        Two
+    </option>
+    <option value="threww">
+        Three
+    </option>
+</TnTComponents.TnTInputSelect>
+
+
+@code {
+    public string ?value { get; set; }
+}
 
 
 
