--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -26,7 +26,11 @@
     input:-webkit-autofill,
     input:-webkit-autofill:hover,
     input:-webkit-autofill:focus,
-    input:-webkit-autofill:active {
+    input:-webkit-autofill:active, 
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus,
+    select:-webkit-autofill:active {
         -webkit-background-clip: text;
     }
 
