--- a/TnTComponents/Styles/TnTComponents/_chips.scss
+++ b/TnTComponents/Styles/TnTComponents/_chips.scss
@@ -52,16 +52,23 @@
         background-color: var(--bg-color);
         color: var(--text-color);
         border: none;
+        min-width: 2rem;
 
         button.tnt-components {
-            padding: 0 0 0 0.5rem;
-            margin: 0;
+            padding: 0;
+            margin: 0 0 0 0.5rem;
             min-height: revert;
             min-width: revert;
             width: 1rem;
             height: 1rem;
             float: right;
-            font-size: 14px;
+            font-size: 12px;
+            color: inherit;
+
+            .tnt-icon {
+                font-size: inherit;
+                padding: 0;
+            }
         }
     }
 }
