Minor updates to currency to allow multiple types

--- a/TnTComponents/Form/TnTInputCurrency.razor
+++ b/TnTComponents/Form/TnTInputCurrency.razor
@@ -1,5 +1,6 @@
 ﻿@namespace TnTComponents
-@inherits TnTInputBase<decimal?>
+@typeparam TCurrency
+@inherits TnTInputBase<TCurrency?>
 
 @{
     base.BuildRenderTree(__builder);
