Upgraded divider and other minor fixes

--- a/TnTComponents/Styles/TnTComponents/_typeography.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeography.scss
@@ -209,3 +209,20 @@ tnt-display-large {
     line-height: $tnt-typescale-title-small-line-height;
     letter-spacing: $tnt-typescale-title-small-letter-spacing;
 }
+
+
+.tnt-text-align-center {
+    text-align: center;
+}
+
+.tnt-text-align-left {
+    text-align: left;
+}
+
+.tnt-text-align-right {
+    text-align: right;
+}
+
+.tnt-text-algin-justify {
+    text-align: justify;
+}
