--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -20,7 +20,6 @@
 @import 'TnTComponents/_snackbar.scss';
 @import 'TnTComponents/_datagrid.scss';
 @import 'TnTComponents/_chips.scss';
-@import 'Components/_datagrid.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
@@ -32,4 +31,18 @@ body {
 
 * {
     scrollbar-color: $tnt-color-on-surface-variant $tnt-color-surface-variant;
+}
+
+.tnt-divider-horizontal {
+    box-sizing: border-box;
+    border-top: 1px solid var(--divider-color);
+    width: 100%;
+    margin: 0 0.1rem;
+}
+
+.tnt-divider-vertical {
+    box-sizing: border-box;
+    border-left: 1px solid var(--divider-color);
+    height: 100%;
+    margin: 0.1rem 0;
 }
