--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -16,6 +16,6 @@
 <h3>
     Interactive Web Assembly
 </h3>
-<DataGridComponent @rendermode="@RenderMode.InteractiveWebAssembly" />
+<DataGridComponent @rendermode="@RenderMode.InteractiveAuto" />
 
 
